# Introduction-to-Algorithm-c

./: .anjuta_sym_db.db  Makefile.am  configure.ac  hello.c
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
src/: Makefile.am  algorithm.h  binarysearchtree.h  insert_sort.c  lib.c  libalgorithm-0.1.pc.in  sort.h  stack2queue.c
